# ORNATOERP

./: .coverage  .env.example  .gitignore  .impeccable.md  LOTE6_CORRIGIDO.json  PROMPT_BASE_CONHECIMENTO.md  RESEARCH_SKETCHUP_WOODWORKING_PLUGINS.md  ROADMAP_MELHORIAS.md  deploy.sh  ecosystem.config.cjs  eslint.config.js  gerar-doc-pdf.mjs  index.html  marcenaria-erp-v2.jsx  ornato-doc.html  package-lock.json  package.json  playwright.config.js  prompt-claude-design-completo.md  prompt-claude-design.md  tailwind.config.js  test-sketchup-export.json  vite.config.js
cnc_optimizer/: .env.example  benchmark_advanced.py  benchmark_lote6_real.py  benchmark_scenario.py  pyproject.toml  requirements.txt
cnc_optimizer/app/: __init__.py  config.py  main.py
cnc_optimizer/app/api/: routes_bridge.py  routes_export.py  routes_health.py  routes_jobs.py  routes_optimize.py
cnc_optimizer/app/core/cutting/: onion_skin.py  op_builder.py  precedence.py  tabs.py
cnc_optimizer/app/core/domain/: enums.py  materials.py  models.py  parsers.py  tools.py
cnc_optimizer/app/core/export/: gcode_generator.py  json_exporter.py  svg_exporter.py
cnc_optimizer/app/scoring/: score_engine.py  weights.py
cnc_optimizer/docs/: FLOW_MAP.md  GLOSSARY.md  SPEC.md
cnc_optimizer/tests/: conftest.py  test_benchmark_audit.py  test_bridge.py  test_cutting.py  test_export.py  test_geometry.py  test_health.py  test_integration.py  test_models.py  test_nesting.py  test_optimizer.py  test_parsers.py  test_remnants.py  test_rotation.py  test_scoring.py  test_vacuum.py
deploy/: ornato-erp.nginx  update.sh  (+1 more)
(+1183 files in other folders)
